--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,18 @@
  /* --------------------------Special paddings, margins and styling------------------------------------------ */
 
  
- body {
+ html, body {
   background: url("../images/cookbook.jpg") no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   margin: 0;
-  overflow-x: hidden;
+  padding: 0;
   overflow-y: visible;
  }
-
 
  .container-fluid {
   -webkit-background-size: cover;
@@ -27,7 +26,7 @@
  }
 
  form {
-  position: absolute;
+  position: fixed;
   z-index: 3;
   margin: 0;
   margin-bottom: 15vw;
@@ -152,7 +151,7 @@
  footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
  }
 
  /* --------------------------------------------------Media Queries------------------------------- */
@@ -183,6 +182,7 @@
   .navbar-right {
    margin-bottom: 23px;
   }
+  
  }
 
 
